disable native-comp and package

--- a/emacs.org
+++ b/emacs.org
@@ -136,13 +136,13 @@ relocated to /.emacs.d/var/.
 ;; native compilation
 (when (forge/native-comp-p)
   (add-to-list 'native-comp-eln-load-path (locate-user-emacs-file "var/eln"))
-  (setq native-comp-deferred-compilation t)
+  (setq native-comp-deferred-compilation nil)
   (setq native-comp-async-report-warnings-errors 'silent))
 
 ;; package quickstart
-(setq package-enable-at-startup t)            ;; initialize now with package-quickstart
+(setq package-enable-at-startup nil)            ;; initialize now with package-quickstart
 (setq package-quickstart-file (locate-user-emacs-file "var/package-quickstart.el"))
-(setq package-quickstart t)
+(setq package-quickstart nil)
 
 ;; help startup and garbage collection
 (setq gc-cons-threshold most-positive-fixnum) ;; Set garbage collection to highest threshold
@@ -267,9 +267,9 @@ Configure Emacs to use the above defined paths.  Also configure some basic behav
   (forge/clean-user-emacs-directory)
   ;; when native compilation is available ...
   (when (forge/native-comp-p)
-    (setq native-comp-deferred-compilation t
+    (setq native-comp-deferred-compilation nil
           native-comp-async-report-warnings-errors 'silent
-          package-native-compile t))
+          package-native-compile nil))
   ;;
   (add-to-list 'load-path forge-site-dir)
   (add-to-list 'custom-theme-load-path forge-themes-dir)
